# backend/src/main/java/ch/myhairdresser/backend/model/dao/Hairsalon.java
@@ -37,4 +37,7 @@ public class Hairsalon {
     @OneToMany(mappedBy = "hairsalon", cascade = CascadeType.ALL, orphanRemoval = true, fetch = FetchType.EAGER)
     private List<DailyOpeningHours> dailyOpeningHours;
 
+    @OneToMany(mappedBy = "hairsalon", cascade = CascadeType.ALL, orphanRemoval = true, fetch = FetchType.EAGER)
+    private List<Service> services;
+
 }
